--- a/src/EF6.Commands/project.json
+++ b/src/EF6.Commands/project.json
@@ -1,4 +1,5 @@
 {
+  "version": "1.0.0-alpha-1",
   "dependencies": {
     "EntityFramework": "6.1.3",
     "Microsoft.Framework.Runtime.Interfaces": "1.0.0-*"
