--- a/src/EF6.Commands/project.json
+++ b/src/EF6.Commands/project.json
@@ -1,14 +1,14 @@
 {
-  "version": "1.0.0-alpha-1",
+  "version": "1.1.0-beta",
   "dependencies": {
     "EntityFramework": "6.1.3",
-    "Microsoft.Framework.Runtime.Interfaces": "1.0.0-*"
+    "Microsoft.Framework.Runtime.Interfaces": "1.0.0-*",
+    "Microsoft.Framework.CommandLineUtils": { "version": "1.0.0-*", "type": "build" }
   },
   "frameworks": {
     "dnx451": {
       "frameworkAssemblies": {
-        "System.Data": "4.0.0.0",
-        "System.Windows.Forms": "4.0.0.0"
+        "System.Data": "4.0.0.0"
       },
       "dependencies": { }
     }
