--- a/src/EF6.Commands/project.json
+++ b/src/EF6.Commands/project.json
@@ -2,7 +2,7 @@
   "version": "1.1.0-beta",
   "dependencies": {
     "EntityFramework": "6.1.3",
-    "Microsoft.Framework.Runtime.Interfaces": "1.0.0-*",
+    "Microsoft.Framework.Runtime.Abstractions": "1.0.0-*",
     "Microsoft.Framework.CommandLineUtils": { "version": "1.0.0-*", "type": "build" }
   },
   "frameworks": {
