--- a/src/EF6.Commands/project.json
+++ b/src/EF6.Commands/project.json
@@ -1,16 +1,15 @@
 {
-  "version": "1.1.1-beta",
+  "version": "1.1.1-beta4",
   "dependencies": {
     "EntityFramework": "6.1.3",
-    "Microsoft.Framework.Runtime.Abstractions": "1.0.0-*",
-    "Microsoft.Framework.CommandLineUtils": { "version": "1.0.0-*", "type": "build" }
+    "Microsoft.Framework.Runtime.Interfaces": "1.0.0-beta4",
+    "Microsoft.Framework.CommandLineUtils": "1.0.0-beta4"
   },
   "frameworks": {
     "dnx451": {
       "frameworkAssemblies": {
         "System.Data": "4.0.0.0"
-      },
-      "dependencies": { }
+      }
     }
   },
   "commands": {
